[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scenes/Player/DorothyArea.gd" type="Script" id=1]
[ext_resource path="res://Systems/PsychosesSystem.gd" type="Script" id=2]
[ext_resource path="res://Psychoses/Hopless/Hopless.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/Dorothy_front-1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Player/SpriteFrames/DorothySprite.tres" type="SpriteFrames" id=6]
[ext_resource path="res://art/Tin_Man_axe.png" type="Texture" id=7]
[ext_resource path="res://art/Dorothy_area.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Player/Axe/Axe.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Player/TinManWeapone.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Player/SpriteFrames/LionSprite.tres" type="SpriteFrames" id=15]
[ext_resource path="res://Scenes/Player/SpriteFrames/TinManSprite.tres" type="SpriteFrames" id=16]
[ext_resource path="res://art/Lion_front-1.png" type="Texture" id=17]
[ext_resource path="res://art/Tin_Man_front-1.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Player/SFX/Tin_man_death.wav" type="AudioStream" id=19]
[ext_resource path="res://Scenes/Player/SFX/Dorothy_death.wav" type="AudioStream" id=20]
[ext_resource path="res://Scenes/Player/SFX/Lion_death.wav" type="AudioStream" id=21]
[ext_resource path="res://Scenes/Player/SFX/Lion_Ouch.wav" type="AudioStream" id=22]
[ext_resource path="res://Scenes/Player/SFX/Dorothy_ouch.wav" type="AudioStream" id=23]
[ext_resource path="res://Scenes/Player/SFX/Tin_man_ouch.wav" type="AudioStream" id=24]
[ext_resource path="res://art/Dorothy_footsteps_1.wav" type="AudioStream" id=25]
[ext_resource path="res://art/Tin_man_footsteps_1.wav" type="AudioStream" id=26]
[ext_resource path="res://art/Lion_footsteps_1.wav" type="AudioStream" id=27]

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.0
height = 74.0

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.00501098, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.994989, 0.324 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.75
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 29.0
height = 79.6598

[sub_resource type="CircleShape2D" id=10]
radius = 141.032

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
z_index = 5
collision_layer = 256
collision_mask = 256
script = ExtResource( 14 )
speed = 400
characters = [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 6 ) ]
characters_texture = [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 5 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 6 )
animation = "right"

[node name="Trail" type="Particles2D" parent="."]
z_index = -1
amount = 10
speed_scale = 2.0
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 5 )

[node name="SwitchCD" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 12 )

[node name="DorothyArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
monitorable = false
script = ExtResource( 1 )

[node name="Frequency" type="Timer" parent="DorothyArea"]
wait_time = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="DorothyArea"]
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="DorothyArea"]
light_mask = 0
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 9 )

[node name="TinManWeapone" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -39, 18 )
frames = SubResource( 11 )
script = ExtResource( 13 )
axe = ExtResource( 12 )
speed = 200

[node name="ThrowCD" type="Timer" parent="TinManWeapone"]
wait_time = 5.0

[node name="DorothyDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="TinManDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="LionDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[node name="DorothyHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
volume_db = 1.0

[node name="TinManHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = 10.0

[node name="LionHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
volume_db = 1.0

[node name="DorothySwap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
volume_db = 12.0

[node name="TinManSwap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
volume_db = 8.0

[node name="LionSwap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 27 )
volume_db = 6.0

[node name="PsychosesSystem" type="Node" parent="."]
script = ExtResource( 2 )
psychoses = [ ExtResource( 3 ) ]

[connection signal="dorothy_armed" from="." to="DorothyArea" method="_on_Player_dorothy_armed"]
[connection signal="tin_man_armed" from="." to="TinManWeapone" method="_on_Player_tin_man_armed"]
[connection signal="timeout" from="SwitchCD" to="." method="_on_SwitchCD_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="DorothyArea" to="DorothyArea" method="_on_DorothyArea_body_entered"]
[connection signal="body_exited" from="DorothyArea" to="DorothyArea" method="_on_DorothyArea_body_exited"]
[connection signal="timeout" from="DorothyArea/Frequency" to="DorothyArea" method="_on_Timer_timeout"]
[connection signal="timeout" from="TinManWeapone/ThrowCD" to="TinManWeapone" method="_on_Timer_timeout"]
